product container quantity left <span> fix color contrast

--- a/style/_about.scss
+++ b/style/_about.scss
@@ -52,7 +52,8 @@
 
             span {
                 font-size: 1rem;
-                color: $dark-gray;
+                // color: $dark-gray;
+                color: #575757;
                 font-weight: 400;
             }
         }
